objects/AccQaTest2__c.object
<CustomObject>
    <fields>
        <fullName>QaField3__c</fullName>
        <label>QaField3</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>QaTestField1__c</fullName>
        <label>QaTestField1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>QaTestField2__c</fullName>
        <label>QaTestField2</label>
        <type>Phone</type>
    </fields>
    <label>AccQaTest2</label>
    <nameField>
        <label>AccQaTest2 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AccQaTest2s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>